fix overflow in calculated results

--- a/src/components/dialogs/insert-function-dialog/insert-function-dialog.module.css
+++ b/src/components/dialogs/insert-function-dialog/insert-function-dialog.module.css
@@ -43,6 +43,7 @@
     flex-direction: row;
     align-items: center;
     gap: .5em;
+    overflow: hidden;
 
     .calculated {
       overflow: hidden;
